mobile alignment issue - test 2

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,4 +31,7 @@ button:hover {
 #canvas {
     background-color: rgb(2, 128, 0);
     grid-column: 2;
+    width: 45vw;
+    height: auto;
+    display: block;
 }
